<resources>
    <string name="app_name">Card y Recycler View</string>

    <string name="IrRecyclerView">RecyclerView</string>
    <string name="IrCardView">CardView</string>
    <string name="IrComandantes">Comandantes</string>
    <string name="IrFrutasVerduras">Frutas Verduras</string>

    <string name="tvPruebaCard">Probando cardview</string>

    <!--Spinner comandantes-->
    <string name="textViewFaccionComandanteItem">Faccion/Comandante</string>
    <string name="textViewFaccion">Facción</string>
    <string name="textViewComandante">Comandante</string>

    <string name="addComandante">Agregar Comandante</string>

    <!--CardView-->
    <string name="textViewNombreComandante">Nombre Comandante</string>
    <string name="textViewFraseComandante">Frase Comandante</string>
    <string name="textViewDescripcionComandante">Zeratul es miembro de los templarios tétricos, un grupo de guerreros psiónicos cuyos antepasados ​​fueron exiliados de Aiur, el planeta natal de los protoss, hace más de mil años. Los templarios tétricos se negaron a unirse al Khala, la mente común que conecta a todos los protoss, para vivir como seres independientes. Como líder de los templarios tétricos, Zeratul ostenta el rango de prelado y ha resultado crucial para asegurar la supervivencia de los protoss desde los inicios de la amenaza zerg.</string>

    <string name="textViewMostrarMas">Mostrar más</string>
    <string name="textViewMostrarMenos">Mostrar menos</string>


    <!--Ejercicio Seccion-->

    <string name="tvCantidadTotal">Cantidad Frutas: </string>
    <string name="tvCantidadTotalValorDefecto">9999</string>
    <string name="tvTotalPrecio">Total: $</string>
    <string name="tvTotalPrecioValorDefecto">9999</string>

    <string name="btnIrAgregarFruta">Agregar Fruta</string>
    <string name="btnIrGenerarTicket">Generar Ticket</string>

    <string name="tvNombreFrutaVerduraDefecto">Arándano</string>
    <string name="tvPrecio">Precio: $</string>
    <string name="tvPrecioValorDefecto">9999</string>

    <string name="tvCantidad">Cantidad: </string>
    <string name="tvCantidadValorDefecto">9999</string>

    <string name="tvCantidadTomada">Lleva:</string>
    <string name="tvCantidadTomadaValorDefecto">11</string>

    <!--Crear Fruta/Verdura -->
    <string name="tvNombreFrutaVerduraSpinner">Nombre:</string>
    <string name="tvCategoriaFrutaVerduraSpinner">Categoria:</string>
    <string name="btnCrearFrutaVerdura">Crear</string>
    <string name="edCantidadFrutaVerduraAsignarHint">Cantidad</string>
    <string name="edPrecioFrutaVerduraAsignarHint">Precio</string>

    <string name="tvSpinnerItem">Categoria/FV</string>

    <string-array name="categoriasFrutasVerduras">
        <item>Frutas</item>
        <item>Verduras</item>
    </string-array>

    <string-array name="stringArrayFrutas">
        <item>Arándano</item>
        <item>Aguacate</item>
        <item>Cereza</item>
        <item>Fresa</item>
        <item>Kiwi</item>
        <item>Limón</item>
        <item>Manzana</item>
        <item>Pera</item>
        <item>Piña</item>
        <item>Plátano</item>
        <item>Naranja</item>
        <item>Sandía</item>
        <item>Uva</item>
    </string-array>

    <string-array name="stringArrayVerduras">
        <item>Brócoli</item>
        <item>Calabaza</item>
        <item>Cebolla</item>
        <item>Maíz</item>
        <item>Papa</item>
        <item>Pimiento</item>
        <item>Repollo</item>
        <item>Tomate</item>
        <item>Zanahoria</item>
    </string-array>

    <!--Ticket-->
    <string name="tvProducto" >Producto</string>
    <string name="tvCantidadComprada" >Cantidad</string>
    <string name="tvPrecioIndividual" >Precio U</string>
    <string name="tvTotalIndividual" >Total</string>

    <string name="tvProductoValor" >Producto</string>
    <string name="tvCantidadProductoValor" >Cantidad</string>
    <string name="tvPrecioProductoValor" >$$$</string>
    <string name="tvTotalProductoValor" >$$$</string>

    <string name="tvTotalFinal" >Total $</string>
    <string name="tvTotalFinalValor" >$$$</string>

</resources>