<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EjercicioSeccion.Activity.CrearFrutaVerduraActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvCategoriaFrutaVerduraSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/tvCategoriaFrutaVerduraSpinner" />

        <Spinner
            android:id="@+id/spCategoriaFV"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginVertical="5dp" />

        <TextView
            android:id="@+id/tvNombreFrutaVerduraSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/tvNombreFrutaVerduraSpinner" />

        <Spinner
            android:id="@+id/spNombreFV"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginVertical="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/edCantidadFrutaVerduraAsignar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:hint="@string/edCantidadFrutaVerduraAsignarHint"
            android:inputType="number" />

        <EditText
            android:id="@+id/edPrecioFrutaVerduraAsignar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:hint="@string/edPrecioFrutaVerduraAsignarHint"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/btnCrearFrutaVerdura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnCrearFrutaVerdura"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>