<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        tools:layout_editor_absoluteX="-70dp"
        tools:layout_editor_absoluteY="2dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewNombreComandante"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewNombreComandante" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewComandante"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    app:srcCompat="@mipmap/ic_zeratul_round" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewFraseComandante"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textViewFraseComandante" />

                    <TextView
                        android:id="@+id/textViewDescripcionComandante"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textViewDescripcionComandante" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>